# surge-orchestrator

./: .env.example  .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_sol_capabilities.py  0002_sol_dispatches.py  0003_sol_approvals.py  0004_sol_policies.py  0005_sol_learned_tiers.py  0006_sol_token_audit.py  0007_broker_capability_no_human.py
docs/: AUTO_REMEDIATION.md  DEPLOY.md  RUNBOOK_token_rotation.md  SHADOW_HOOKS.md
scripts/: bootstrap_db.sh  bootstrap_mtls.sh  install_nginx_mtls.sh  issue_tokens.py  nginx-sol-mtls.conf  policy.yaml  rotate_jwt_key.py  run_migrations.sh  seed_capabilities.py  smoke_broker_routed_dispatch.py  smoke_email_approval.py  sol.service  verify_schema.sh
src/sol/: __init__.py  db.py  degraded.py  main.py  settings.py
src/sol/admin/: router.py
src/sol/api/: approvals.py  audit.py  capabilities.py  deps.py  dispatch.py  health.py  policies.py  tokens.py
src/sol/auth/: callback_tokens.py  jwt.py  keystore.py  (+3 more)
tests/: conftest.py
tests/integration/: test_dispatch_enforce_email.py  test_dispatch_shadow_path.py
tests/unit/: test_auth.py  test_broker_executor.py  test_callback_tokens.py  test_cross_rules.py  test_delivery_router.py  test_dispatch_hash.py  test_email_delivery.py  test_health.py  test_keystore.py  test_metrics.py  test_mtls.py  test_policy_cache_cross_rules.py  test_remediation.py  test_remediation_lane.py  test_settings.py  test_surge_runner_executor.py  test_tenant_isolation.py
(+31 files in other folders)
