[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sol"
version = "0.1.0"
description = "Surge Orchestration Layer — unified policy + audit + dispatch surface."
requires-python = ">=3.12,<3.13"
authors = [{name = "SurgeXi"}]
license = {text = "Proprietary"}
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.13,<2.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg2-binary>=2.9,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "bcrypt>=4.2,<5.0",
  "prometheus-client>=0.21,<1.0",
  "structlog>=24.4,<25.0",
  "httpx>=0.27,<0.28",
  "pyyaml>=6.0,<7.0",
  "ulid-py>=1.1,<2.0",
  "cryptography>=43.0,<44.0",
  "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.13,<2.0",
  "respx>=0.21,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# B008: FastAPI Depends() in defaults is idiomatic.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
